Enhance README with project details and instructions
Updated README to include detailed project information, features, technology stack, installation instructions, usage guidelines, and troubleshooting tips.